--- a/balance-microservice/src/main/resources/application.properties
+++ b/balance-microservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=balance-service
+spring.application.name=balance-microservice
 server.port=9091
 
 # Spring DataSource Basic Config
