--- a/databases/postgresql.yml
+++ b/databases/postgresql.yml
@@ -7,7 +7,7 @@ services:
       - 5432:5432
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD={POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgresql-data:/var/lib/postgresql/data
 
