--- a/customer-microservice/src/main/resources/application.properties
+++ b/customer-microservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=customer-microservice
+spring.application.name=customer
 server.port=9092
 
 # Spring DataSource Basic Config
