Eureka and API Gateway

--- a/balance-microservice/src/main/resources/application.properties
+++ b/balance-microservice/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=9091
 spring.datasource.url=jdbc:postgresql://127.0.01:5432/bank
 spring.datasource.username=spring
 spring.datasource.password=.y&T@pzF5weBmB^?
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.prefer-ip-address=true
