--- a/customer-microservice/src/main/resources/application.properties
+++ b/customer-microservice/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=spring
 spring.datasource.password=.y&T@pzF5weBmB^?
 
 spring.jpa.properties.hibernate.show_sql = true
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.prefer-ip-address=true
