UserDTO and UserController

--- a/customer-microservice/pom.xml
+++ b/customer-microservice/pom.xml
@@ -101,6 +101,7 @@
 							<artifactId>lombok-mapstruct-binding</artifactId>
 							<version>0.2.0</version>
 						</path>
+						<!-- other annotation processors -->
 					</annotationProcessorPaths>
 					<compilerArgs>
 						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
