--- a/user-microservice/src/main/resources/application.properties
+++ b/user-microservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=user-microservice
+spring.application.name=user
 server.port=9093
 
 # Spring DataSource Basic Config
@@ -7,3 +7,7 @@ spring.datasource.username=spring
 spring.datasource.password=.y&T@pzF5weBmB^?
 
 spring.jpa.properties.hibernate.show_sql = true
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.prefer-ip-address=true
