Microservices with Docker

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -23,5 +23,5 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:1111/eureka
+      defaultZone: http://eureka:1111/eureka
     register-with-eureka: false
