--- a/balance-microservice/src/main/resources/application.properties
+++ b/balance-microservice/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=balance
 server.port=9091
 
 # Spring DataSource Basic Config
-spring.datasource.url=jdbc:postgresql://127.0.01:5432/bank
-spring.datasource.username=spring
-spring.datasource.password=.y&T@pzF5weBmB^?
+spring.datasource.url=jdbc:postgresql://postgres:5432/bank
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.client.service-url.defaultZone=http://eureka:1111/eureka
 eureka.instance.prefer-ip-address=true
