--- a/user-microservice/src/main/resources/application.properties
+++ b/user-microservice/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=user
 server.port=9093
 
 # Spring DataSource Basic Config
-spring.datasource.url=jdbc:postgresql://127.0.01:5432/bank
-spring.datasource.username=spring
-spring.datasource.password=.y&T@pzF5weBmB^?
+spring.datasource.url=jdbc:postgresql://postgres:5432/bank
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.show_sql = true
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.client.service-url.defaultZone=http://eureka:1111/eureka
 eureka.instance.prefer-ip-address=true
